# Advent2024

./: Cargo.toml  LICENSE  README.md  out.txt
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/data/: example2.txt
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/data/: example3.txt
day16/src/: main.rs
day17/: Cargo.toml
day17/data/: example3.txt
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/data/: example2.txt
day19/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day25/: Cargo.toml
day25/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
util/: Cargo.toml
util/src/: coord.rs  field.rs  fieldview.rs  input.rs  lib.rs  parser.rs  primitives.rs
util/util-macros/: Cargo.toml
util/util-macros/src/: lib.rs
